hphp/hack/test/typecheck/control_flow/do_assign_in_invariant.php.exp
File "do_assign_in_invariant.php", line 47, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 29, characters 20-21:
  This is an object of type BD
  File "do_assign_in_invariant.php", line 41, characters 12-12:
  It is incompatible with an object of exactly the class A
File "do_assign_in_invariant.php", line 59, characters 29-30:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 36, characters 37-37:
  This is an object of type B
  File "do_assign_in_invariant.php", line 56, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 59, characters 33-34:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 36, characters 43-43:
  This is an object of type D
  File "do_assign_in_invariant.php", line 48, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 45, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 25, characters 20-21:
  This is an object of type AB
  File "do_assign_in_invariant.php", line 56, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 46, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 26, characters 20-21:
  This is an object of type AD
  File "do_assign_in_invariant.php", line 48, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 47, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 29, characters 20-21:
  This is an object of type BD
  File "do_assign_in_invariant.php", line 41, characters 12-12:
  It is incompatible with an object of exactly the class A
File "do_assign_in_invariant.php", line 59, characters 29-30:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 36, characters 37-37:
  This is an object of type B
  File "do_assign_in_invariant.php", line 56, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 59, characters 33-34:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 36, characters 43-43:
  This is an object of type D
  File "do_assign_in_invariant.php", line 48, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 45, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 25, characters 20-21:
  This is an object of type AB
  File "do_assign_in_invariant.php", line 56, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 46, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 26, characters 20-21:
  This is an object of type AD
  File "do_assign_in_invariant.php", line 48, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 47, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 29, characters 20-21:
  This is an object of type BD
  File "do_assign_in_invariant.php", line 41, characters 12-12:
  It is incompatible with an object of exactly the class A
File "do_assign_in_invariant.php", line 59, characters 29-30:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 36, characters 37-37:
  This is an object of type B
  File "do_assign_in_invariant.php", line 56, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 59, characters 33-34:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 36, characters 43-43:
  This is an object of type D
  File "do_assign_in_invariant.php", line 48, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 63, characters 13-14:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 28, characters 20-21:
  This is an object of type BC
  File "do_assign_in_invariant.php", line 56, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 64, characters 13-14:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 29, characters 20-21:
  This is an object of type BD
  File "do_assign_in_invariant.php", line 52, characters 14-14:
  It is incompatible with an object of exactly the class C
File "do_assign_in_invariant.php", line 65, characters 13-14:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 30, characters 20-21:
  This is an object of type CD
  File "do_assign_in_invariant.php", line 48, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 74, characters 14-15:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 22, characters 19-19:
  This is an object of type E
  File "do_assign_in_invariant.php", line 69, characters 12-12:
  It is incompatible with an object of exactly the class A
File "do_assign_in_invariant.php", line 86, characters 39-40:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 33, characters 41-41:
  This is an object of type B
  File "do_assign_in_invariant.php", line 83, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 86, characters 43-44:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 33, characters 47-47:
  This is an object of type D
  File "do_assign_in_invariant.php", line 75, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 73, characters 14-15:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 19, characters 19-19:
  This is an object of type A
  File "do_assign_in_invariant.php", line 33, characters 55-55:
  It is incompatible with an object of type E
File "do_assign_in_invariant.php", line 74, characters 14-15:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 22, characters 19-19:
  This is an object of type E
  File "do_assign_in_invariant.php", line 69, characters 12-12:
  It is incompatible with an object of exactly the class A
File "do_assign_in_invariant.php", line 86, characters 39-40:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 33, characters 41-41:
  This is an object of type B
  File "do_assign_in_invariant.php", line 83, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 86, characters 43-44:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 33, characters 47-47:
  This is an object of type D
  File "do_assign_in_invariant.php", line 75, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 73, characters 14-15:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 19, characters 19-19:
  This is an object of type A
  File "do_assign_in_invariant.php", line 33, characters 55-55:
  It is incompatible with an object of type E
File "do_assign_in_invariant.php", line 74, characters 14-15:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 22, characters 19-19:
  This is an object of type E
  File "do_assign_in_invariant.php", line 69, characters 12-12:
  It is incompatible with an object of exactly the class A
File "do_assign_in_invariant.php", line 86, characters 39-40:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 33, characters 41-41:
  This is an object of type B
  File "do_assign_in_invariant.php", line 83, characters 14-14:
  It is incompatible with an object of exactly the class D
File "do_assign_in_invariant.php", line 86, characters 43-44:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 33, characters 47-47:
  This is an object of type D
  File "do_assign_in_invariant.php", line 75, characters 14-14:
  It is incompatible with an object of exactly the class B
File "do_assign_in_invariant.php", line 90, characters 13-14:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 32, characters 20-21:
  This is an object of type CE
  File "do_assign_in_invariant.php", line 33, characters 54-55:
  It is incompatible with a nullable type
File "do_assign_in_invariant.php", line 91, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 20, characters 23-23:
  This is an object of type C
  File "do_assign_in_invariant.php", line 33, characters 55-55:
  It is incompatible with an object of type E
File "do_assign_in_invariant.php", line 92, characters 15-16:
Invalid argument (Typing[4110])
  File "do_assign_in_invariant.php", line 21, characters 23-23:
  This is an object of type E
  File "do_assign_in_invariant.php", line 79, characters 14-14:
  It is incompatible with an object of exactly the class C
